--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="/CSS/index_style.css" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
 
@@ -34,10 +35,10 @@
       <div class="row">
         <div class="col custom-padding">
           <h2><em> Welcome to my website! </em></h2>
-        <P class="text"> My name is Claudiu Ghise, and i'm a vocational student as a <strong> software developer</strong> in Schwabach Germany,my journey as a trainee startet on September 2021 and it will end on August 2024.
-        </P>
+          <P class="text"> My name is Claudiu Ghise, and i'm a vocational student as a <strong> software developer</strong> in Schwabach Germany,my journey as a trainee startet on September 2021 and it will end on August 2024.
+          </P>
         </div>
-        <div class="col custom-padding"> </div>
+        <div class="col customPad-2col"><img class="profilePicture" src="/Image/claudiu.png" alt="none"> </div>
       </div>
       <div class="row">
         <div class="col custom-padding">
@@ -49,6 +50,21 @@
             <li>Weightlifting</li>
             <li>Video games</li>
           </ul>
+        </div>
+        <div class="col customPad-2col">
+          <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="carImg" src="/Image/claudiu logo.png"  alt="...">
+              </div>
+              <div class="carousel-item">
+                <img class="carImg" src="/Image/claudiu logo2.png"  alt="...">
+              </div>
+              <div class="carousel-item">
+                <img class="carImg" src="/Image/claudiu logo3.png"  alt="...">
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <div class="row">
