--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Claudiu Ghise</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link rel="stylesheet" href="/CSS/index_style.css" />
+  <link rel="stylesheet" type="text/css" href="/CSS/index_style.css" />
   <script src="https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
