--- a/projects.html
+++ b/projects.html
@@ -24,12 +24,15 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/projects.html">Projects</a>
+           
+
           </li>
         </ul>
       </div>
     </nav>
       <!--Navigation bar end-->
-    <h1>
-    </h1>
+
+      <Button type="button" onclick ="window.location.href='snake.html'" >Snake game.</Button>
+  
 </body>
 </html>
