--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,7 @@
     </nav>
       <!--Navigation bar end-->
 
-      <Button type="button" onclick ="window.location.href='snake.html'" >Snake game.</Button>
+      <Button class="ProjBtn" type="button" onclick ="window.location.href='snake.html'" >Snake game.</Button>
   
 </body>
 </html>
