added honeycomb image

--- a/projects.html
+++ b/projects.html
@@ -31,8 +31,27 @@
       </div>
     </nav>
       <!--Navigation bar end-->
-
-      <Button class="ProjBtn" type="button" onclick ="window.location.href='snake.html'" >Snake game.</Button>
-  
+      <div class="container">
+        <div class="column">
+          <h1>Games</h1>
+          <Button class="ProjBtn" type="button" onclick ="window.location.href='snake.html'" >Snake game.</Button>
+          <button class="ProjBtn">In progress...</button>
+          <button class="ProjBtn">In progress...</button>
+        </div>
+        <div class="column">
+            <h1>Coding</h1>
+            <button class="ProjBtn">In progress...</button>
+            <button class="ProjBtn">In progress...</button>
+            <button class="ProjBtn">In progress...</button>
+        </div>
+        <div class="column">
+          <h1>Welding</h1>
+            <button class="ProjBtn">In progress...</button>
+            <button class="ProjBtn">In progress...</button>
+            <button class="ProjBtn">In progress...</button>
+        </div>
+     
+    </div>
+      
 </body>
 </html>
