--- a/index.html
+++ b/index.html
@@ -1,81 +1,57 @@
 <!DOCTYPE html>
-  <html lang="en">
-  <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Claudiu Ghise</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
-    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="/CSS/index_style.css" />
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-  </head>
-  <body>
-
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="index.html">
-        <img src="/Image/claudiu logo2.png" width="30" height="30" class="d-inline-block align-top" alt="">
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/projects.html">Projects</a>
-          </li>
+<html lang="de">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home - Portfolio</title>
+    <link rel="stylesheet" href="/CSS/index.css">
+    <!-- Slick Carousel CSS -->
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"/>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"/>
+</head>
+<body>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="projects.html">Projects</a></li>
         </ul>
-      </div>
     </nav>
-    
-    <div class="container-sm ">
-      <div class="row">
-        <div class="col custom-padding">
-          <h2><em> Welcome to my website! </em></h2>
-          <P class="text"> My name is Claudiu Ghise, and i'm a vocational student as a <strong> software developer</strong> in Schwabach Germany,my journey as a trainee startet on September 2021 and it will end on August 2024.
-          </P>
+
+    <section id="home">
+        <div class="profile">
+            <img src="/Image/selfie2.jpg" alt="Profilbild" class="profile-pic">
+            <h1>Welcome to my website!</h1>
+            <p>My name is Claudiu Ghise, and i'm a vocational student as a <strong> software developer</strong> 
+                in Schwabach Germany, my journey as a trainee startet on September 2021 and it will end on August 2024.</p>
         </div>
-        <div class="col customPad-2col"><img class="profilePicture" src="/Image/claudiu.png" alt="none"> </div>
-      </div>
-      <div class="row">
-        <div class="col custom-padding">
-          <h3>Hobbies</h3>
-          <ul class="text">
-            <li>Coding</li>
-            <li>Electronics</li>
-            <li>TIG Welding</li>
-            <li>Weightlifting</li>
-            <li>Video games</li>
-          </ul>
+        <div class="carousel">
+            <div><img src="/Image/PasswordManager1.png" alt="Bild 1"></div>
+            <div><img src="/Image/PasswordManager2.png" alt="Bild 2"></div>
+            <div><img src="/Image/PasswordManager3.png" alt="Bild 3"></div>
+            <!-- Weitere Bilder hinzufügen -->
         </div>
-        <div class="col customPad-2col">
-          <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img class="carImg" src="/Image/claudiu logo.png"  alt="...">
-              </div>
-              <div class="carousel-item">
-                <img class="carImg" src="/Image/claudiu logo2.png"  alt="...">
-              </div>
-              <div class="carousel-item">
-                <img class="carImg" src="/Image/claudiu logo3.png"  alt="...">
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col custom-padding">
-          <h3>My contact details</h3>
-          <ul class="text">
-            <li><img class="icon" src="\Image\gmail1.png"> Email :<a href="mailto:claudiughise@gmail.com" class="custom-link"> claudiughise@gmail.com</a></li>
-            <li><img class="icon" src="\Image\github.png"> GitHub :<a href="https://github.com/ClaudiuG18" class="custom-link"> ClaudiuG18</a></li>
-          </ul>
-        </div>
-      </div>
-      
-  </body>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Mein Name. Alle Rechte vorbehalten. </p>
+        <p><a href="impressum.html">Impressum</a></p>
+    </footer>
+
+    <!-- Slick Carousel JS -->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function(){
+            $('.carousel').slick({
+                dots: true,
+                infinite: true,
+                speed: 1500,
+                slidesToShow: 1,
+                slidesToScroll: 1,
+                autoplay: true,
+                autoplaySpeed: 2500
+            });
+        });
+    </script>
+</body>
 </html>
