Deletet old files

--- a/index.html
+++ b/index.html
@@ -16,13 +16,21 @@
             <li><a href="projects.html">Projects</a></li>
         </ul>
     </nav>
+    <h1 class="title">Welcome to my website!</h1>
 
     <section id="home">
         <div class="profile">
-            <img src="/Image/selfie2.jpg" alt="Profilbild" class="profile-pic">
-            <h1>Welcome to my website!</h1>
-            <p>My name is Claudiu Ghise, and i'm a vocational student as a <strong> software developer</strong> 
-                in Schwabach Germany, my journey as a trainee startet on September 2021 and it will end on August 2024.</p>
+            <img src="/Image/claudiu_elegant2.png" alt="Profilbild" class="profile-pic">
+            
+            <p>
+                My name is Claudiu Ghise, and I'm a <strong>software developer</strong>. I completed my vocational training at a German company in Schwabach and 
+                <strong>
+                    <a href="https://www.bsz-roth.de/berufsfachschule-fuer-informatik/die-ausbildung/" target="_blank">Staatliches Berufsfachschule für Informatik Roth,
+                    </a>
+                </strong>
+                gathering experience with C++, C#, WPF, Sql and Python.
+            </p>
+        
         </div>
         <div class="carousel">
             <div><img src="/Image/PasswordManager1.png" alt="Bild 1"></div>
@@ -33,8 +41,12 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Mein Name. Alle Rechte vorbehalten. </p>
-        <p><a href="impressum.html">Impressum</a></p>
+        <div class="contact-div">
+            <a href="https://github.com/ClaudiuG18" target="_blank"><img src="/Image/github.png" alt="GitHub Logo" class="github-logo">GitHub</a>
+        </div>
+        <div class="impressum-div">
+        <a href="impressum.html">Impressum | </a>&copy; 2024 Claudiu Ghise. Alle Rechte vorbehalten.
+        </div>
     </footer>
 
     <!-- Slick Carousel JS -->
