--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <div><img src="/Image/PasswordManager1.png" alt="Bild 1"></div>
             <div><img src="/Image/PasswordManager2.png" alt="Bild 2"></div>
             <div><img src="/Image/PasswordManager3.png" alt="Bild 3"></div>
+            <div><img src="/Image/snake_game1.png" alt="Bild 3"></div>
             <!-- Weitere Bilder hinzufügen -->
         </div>
     </section>
