--- a/projects.html
+++ b/projects.html
@@ -15,21 +15,25 @@
     </nav>
 
     <section id="projects">
-        <h1>Projekte</h1>
-        <p>Hier sind einige meiner letzten Projekte.</p>
+        <h1>Projects</h1>
+        <p>Below you will see a few of my recent projects: </p>
         <div class="project">
-            <h2>Projekt 1</h2>
-            <p>Beschreibung des ersten Projekts.</p>
+            <h2><a href="snake.html">Snake</a> </h2>
+            <p>A simple Snake game in JS. You can try it out by clicking on the Snake word!</p>
         </div>
         <div class="project">
-            <h2>Projekt 2</h2>
-            <p>Beschreibung des zweiten Projekts.</p>
+            <h2>Password manager</h2>
+            <p>A password manager build using WPF and SQLite</p>
         </div>
         <!-- Weitere Projekte können hier hinzugefügt werden -->
     </section>
-
     <footer>
-        <p>&copy; 2024 Mein Name. Alle Rechte vorbehalten. <a href="impressum.html">Impressum</a></p>
+        <div class="contact-div">
+            <a href="https://github.com/ClaudiuG18" target="_blank"><img src="/Image/github.png" alt="GitHub Logo" class="github-logo">GitHub</a>
+        </div>
+        <div class="impressum-div">
+        <a href="impressum.html">Impressum | </a>&copy; 2024 Claudiu Ghise. Alle Rechte vorbehalten.
+        </div>
     </footer>
 </body>
 </html>
