--- a/snake.html
+++ b/snake.html
@@ -1,42 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+<!DOCTYPE html>
+<html lang="de">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snake Game</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
-    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="CSS/snake.css">
-    <title>Snake</title>
-   
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Snake Game</title>
+  <link rel="stylesheet" href="/CSS/snake.css">
+
 </head>
 <body>
-    
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="index.html">
-          <img src="/Image/claudiu logo2.png" width="30" height="30" class="d-inline-block align-top" alt="">
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="/index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/projects.html">Projects</a>
-            </li>
-          </ul>
-        </div>
-    </nav>
+  
+<!-- Navigation bar -->
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="projects.html">Projects</a></li>
+    </ul>
+  </nav>
+  <!-- Nav bar end -->
 
-    <div class="game_window">
-        <canvas id="gameCanvas" width="600" height="600" ></canvas>
+  
+  <!-- Game window -->
+  <div class="container">
+    <div><h1 class="title">Snake</h1></div>
+    <div><canvas id="gameCanvas" width="600" height="600"></canvas></div>
+    <div><button class="start-btn" onclick="startClick()">Start</button></div>
+  </div>
+  <!-- Game window end -->
+
+  <!-- Footer-->
+  <footer>
+    <div class="contact-div">
+      <a href="https://github.com/ClaudiuG18" target="_blank"><img src="/Image/github.png" alt="GitHub Logo"
+          class="github-logo">GitHub</a>
     </div>
-    
-    <button class="start" onclick="startClick()" >Start</button>
-    <script src="snakeGame.js"></script>
+    <div class="impressum-div">
+      <a href="impressum.html">Impressum | </a>&copy; 2024 Claudiu Ghise. Alle Rechte vorbehalten.
+    </div>
+  </footer>
+  <!-- Footer end -->
+
+  <!-- JavaScript -->
+  <script src="snakeGame.js"></script>
+  <!-- JavaScript end -->
+
 </body>
 </html>
