--- a/projects.html
+++ b/projects.html
@@ -22,8 +22,12 @@
             <p>A simple Snake game in JS. You can try it out by clicking on the Snake word!</p>
         </div>
         <div class="project">
-            <h2>Password manager</h2>
+            <h2> <a href="password_manager.html">Password manager</a> </h2>
             <p>A password manager build using WPF and SQLite</p>
+        </div>
+        <div class="project">
+            <h2><a href="tictactoe.html">TiTacToe</a> </h2>
+            <p>TicTacToe Game</p>
         </div>
         <!-- Weitere Projekte können hier hinzugefügt werden -->
     </section>
