--- a/password_manager.html
+++ b/password_manager.html
@@ -26,7 +26,7 @@
     <section class="alignement">
         <div class="left">
             <h1>Offline Password Manager</h1>
-            <p>Our Offline Password Manager is a robust and secure application built using WPF and C#, with SQLite as
+            <p>My Offline Password Manager is a robust and secure application built using WPF and C#, with SQLite as
                 the
                 database backend.
                 This tool is designed to keep your credentials safe and manage them efficiently.
@@ -54,8 +54,9 @@
                     mind
                     and eliminating the risk associated with online storage.</li>
             </ul>
-            <h1>Download File</h1>
-            <a href="path/to/your/file.zip" download>Click here to download the file</a>
+            <h1>Download</h1>
+            <a href="/Resources/PasswordManager/PasswordManager.7z" download>Download PasswordManager.zip</a>
+            <hr>
             <h4>Disclaimer
                 <p>This Offline Password Manager is intended for personal use only. The developer is not responsible for
                     any
