added grammar_game page and css

--- a/projects.html
+++ b/projects.html
@@ -29,6 +29,10 @@
             <h2><a href="tictactoe.html">TiTacToe</a> </h2>
             <p>TicTacToe Game</p>
         </div>
+        <div class="project">
+            <h2> <a href="grammar_game.html">Grammar game</a> </h2>
+            <p>Practice your German grammar skills!</p>
+        </div>
         <!-- Weitere Projekte können hier hinzugefügt werden -->
     </section>
     <footer>
