added buttons and modified js code

--- a/snake.html
+++ b/snake.html
@@ -27,7 +27,15 @@
     <div><h1 class="title">Snake</h1></div>
     <div><canvas id="gameCanvas" width="600" height="600"></canvas></div>
     <div><button class="start-btn" onclick="startClick()">Start</button></div>
+    <div id="controls">
+      <button id="left">Left</button>
+      <button id="up">Up</button>
+      <button id="down">Down</button>
+      <button id="right">Right</button>
+    </div>
   </div>
+
+
   <!-- Game window end -->
 
   <!-- Footer-->
