--- a/grammar_game.html
+++ b/grammar_game.html
@@ -22,7 +22,13 @@
     </nav>
     <!-- Nav bar end -->
 
+    <section class="main-body">
+        <div><h2>Artikel training </h2></div>
 
+    </section>
+        
+
+  
 
 
 
