GrammarGame-Buttons added plus layout

--- a/grammar_game.html
+++ b/grammar_game.html
@@ -22,14 +22,16 @@
     </nav>
     <!-- Nav bar end -->
 
-    <section class="main-body">
-        <div><h2>Artikel training </h2></div>
 
-    </section>
-        
+    <div class="title">
+        <div><h1>Artikel</h1></div>
+    </div>
 
-  
-
+    <div class="btn">
+        <div><button id="der">Der</button></div>
+        <div><button id="die">Die</button></div>
+        <div><button id="das">Das</button></div>
+    </div>
 
 
 
