--- a/grammar_game.html
+++ b/grammar_game.html
@@ -22,9 +22,13 @@
     </nav>
     <!-- Nav bar end -->
 
-
+    <!-- Content -->
     <div class="title">
         <div><h1>Artikel</h1></div>
+    </div>
+
+    <div class="word">
+        <div><h2 id="variable_word">Word</h2></div>
     </div>
 
     <div class="btn">
@@ -32,7 +36,7 @@
         <div><button id="die">Die</button></div>
         <div><button id="das">Das</button></div>
     </div>
-
+    <!-- Content End-->
 
 
     <!-- Footer-->
@@ -47,8 +51,7 @@
     </footer>
     <!-- Footer end -->
 
-
-
+<script src="/grammar-game.js"></script>
 </body>
 
 </html>
