--- a/grammar_game.html
+++ b/grammar_game.html
@@ -28,7 +28,7 @@
     </div>
 
     <div class="word">
-        <div><h2 id="variable_word">Word</h2></div>
+        <div><h2 id="variable_word"> </h2></div>
     </div>
 
     <div class="btn">
