score added and changed the reload page to reload only the word

--- a/grammar_game.html
+++ b/grammar_game.html
@@ -27,6 +27,10 @@
         <div><h1>Artikel</h1></div>
     </div>
 
+    <div id="player">
+        <div id="score"><h3>Score: <p id="scoreNumber"></p> </h3></div>
+    </div>
+
     <div class="word">
         <div><h2 id="variable_word"> </h2></div>
     </div>
