working on romanian words1

--- a/grammar_game.html
+++ b/grammar_game.html
@@ -32,7 +32,7 @@
     </div>
 
     <div class="word">
-        <div><h2 id="variable_word"> </h2></div>
+        <div><h2 id="variable_word"> <h3>RO:</h3><h3 id="roWord"></h3></h2></div>
     </div>
 
     <div class="btn">
