--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <a href="https://www.bsz-roth.de/berufsfachschule-fuer-informatik/die-ausbildung/" target="_blank">Staatliches Berufsfachschule für Informatik Roth,
                     </a>
                 </strong>
-                gathering experience with C++, C#, WPF, Sql and Python.
+                gathering experience with C++, C#, WPF, SQL and Python.
             </p>
         
         </div>
