changes made to romanian words

--- a/grammar_game.html
+++ b/grammar_game.html
@@ -31,8 +31,12 @@
         <div id="score"><h3>Score: <p id="scoreNumber"></p> </h3></div>
     </div>
 
-    <div class="word">
-        <div><h2 id="variable_word"> <h3>RO:</h3><h3 id="roWord"></h3></h2></div>
+    <div class="deword">
+        <div><h2 id="variable_word"> </h2></div>
+    </div>
+
+    <div class="roword">
+        <div><h2 id="roWord"></h2></div>
     </div>
 
     <div class="btn">
