--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
         </div>
         <div class="project">
             <h2><a href="tictactoe.html">TiTacToe</a> </h2>
-            <p>TicTacToe Game</p>
+            <p>TicTacToe Game ## Project in progress ## .... </p>
         </div>
         <div class="project">
             <h2> <a href="grammar_game.html">Grammar game</a> </h2>
