setting the title of the tictactoe page to in progress

--- a/tictactoe.html
+++ b/tictactoe.html
@@ -24,7 +24,7 @@
   
   <!-- Game window -->
   <div class="container">
-    <div><h1 class="title">TicTacToe</h1></div>
+    <div><h1 class="title">Project currently in progress..</h1></div>
     <div><canvas id="tictactoeCanvas" width="600" height="600"></canvas></div>
     <div><button class="start-btn" onclick="ticStartClick()">Start</button></div>
   </div>
