--- a/tictactoe.html
+++ b/tictactoe.html
@@ -6,28 +6,46 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Snake Game</title>
+  <title>TicTacToe Game</title>
   <link rel="stylesheet" href="/CSS/tictactoe.css">
 
 </head>
 <body>
   
 <!-- Navigation bar -->
+ <div class="navbar">
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="projects.html">Projects</a></li>
     </ul>
   </nav>
+ </div>
+  
   <!-- Nav bar end -->
 
   
   <!-- Game window -->
-  <div class="container">
-    <div><h1 class="title">Project currently in progress..</h1></div>
-    <div><canvas id="tictactoeCanvas" width="600" height="600"></canvas></div>
-    <div><button class="start-btn" onclick="ticStartClick()">Start</button></div>
-  </div>
+<div class="game-body">
+  <div class="game-board">
+    <div class="cell" data-index="0"></div>
+    <div class="cell" data-index="1"></div>
+    <div class="cell" data-index="2"></div>
+    <div class="cell" data-index="3"></div>
+    <div class="cell" data-index="4"></div>
+    <div class="cell" data-index="5"></div>
+    <div class="cell" data-index="6"></div>
+    <div class="cell" data-index="7"></div>
+    <div class="cell" data-index="8"></div>
+</div>
+<div class="game-info">
+    <p id="game-status">Player X's turn</p>
+    <button id="restart-button">Restart Game</button>
+</div>
+</div>
+
+
+
   <!-- Game window end -->
 
   <!-- Footer-->
