changes to the project page

--- a/projects.html
+++ b/projects.html
@@ -22,17 +22,22 @@
             <p>A simple Snake game in JS. You can try it out by clicking on the Snake word!</p>
         </div>
         <div class="project">
+            <h2><a href="tictactoe.html">TiTacToe</a> </h2>
+            <p>TicTacToe Game (I know it doesnt make sense in plaiying alone :P)</p>
+        </div>
+        <div class="project">
+            <h2> <a href="grammar_game.html">Grammar game</a> </h2>
+            <p>Practice the German article!</p>
+        </div>
+        <div class="project">
             <h2> <a href="password_manager.html">Password manager</a> </h2>
             <p>A password manager build using WPF and SQLite</p>
         </div>
         <div class="project">
-            <h2><a href="tictactoe.html">TiTacToe</a> </h2>
-            <p>TicTacToe Game ## Project in progress ## .... </p>
+            <h2> <a href="https://earnapp.com/dashboard">Earnapp dashboard</a> </h2>
+            
         </div>
-        <div class="project">
-            <h2> <a href="grammar_game.html">Grammar game</a> </h2>
-            <p>Practice your German grammar skills!</p>
-        </div>
+     
         <!-- Weitere Projekte können hier hinzugefügt werden -->
     </section>
     <footer>
