added a door control option via ESP

--- a/projects.html
+++ b/projects.html
@@ -34,8 +34,7 @@
             <p>A password manager build using WPF and SQLite</p>
         </div>
         <div class="project">
-            <h2> <a href="https://earnapp.com/dashboard">Earnapp dashboard</a> </h2>
-            
+            <h2> <a href="control_poarta.html">Control poarta ESP8266</a> </h2>
         </div>
      
         <!-- Weitere Projekte können hier hinzugefügt werden -->
