--- a/control_poarta.html
+++ b/control_poarta.html
@@ -18,9 +18,10 @@
         </ul>
     </nav>
     <!-- Nav bar end -->
-    <div class="title">
+
+    <div class="title1">
         <p>Poarta</p>
-      </div>
+    </div>
       <div class="btn">
         <button class="close">Inchide</button>
         <button class="open">Deschide</button>
