--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="de">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Portfolio</title>
     <link rel="stylesheet" href="/CSS/index.css">
-    <!-- Slick Carousel CSS -->
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"/>
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"/>
+
 </head>
+
 <body>
     <nav>
         <ul>
@@ -21,16 +21,18 @@
     <section id="home">
         <div class="profile">
             <img src="/Image/claudiu_elegant2.png" alt="Profilbild" class="profile-pic">
-            
+
             <p>
-                My name is Claudiu Ghise, and I'm a <strong>software developer</strong>. I completed my vocational training at a German company in Schwabach and 
+                My name is Claudiu Ghise, and I'm a <strong>software developer</strong>. I completed my vocational
+                training at a German company in Schwabach and
                 <strong>
-                    <a href="https://www.bsz-roth.de/berufsfachschule-fuer-informatik/die-ausbildung/" target="_blank">Staatliches Berufsfachschule für Informatik Roth,
+                    <a href="https://www.bsz-roth.de/berufsfachschule-fuer-informatik/die-ausbildung/"
+                        target="_blank">Staatliches Berufsfachschule für Informatik Roth,
                     </a>
                 </strong>
                 gathering experience with C++, C#, WPF, SQL and Python.
             </p>
-        
+
         </div>
         <div class="carousel">
             <div><img src="/Image/PasswordManager1.png" alt="Bild 1"></div>
@@ -43,18 +45,20 @@
 
     <footer>
         <div class="contact-div">
-            <a href="https://github.com/ClaudiuG18" target="_blank"><img src="/Image/github.png" alt="GitHub Logo" class="github-logo">GitHub</a>
+            <a href="https://github.com/ClaudiuG18" target="_blank"><img src="/Image/github.png" alt="GitHub Logo"
+                    class="github-logo">GitHub</a>
         </div>
         <div class="impressum-div">
-        <a href="impressum.html">Impressum | </a>&copy; 2024 Claudiu Ghise. Alle Rechte vorbehalten.
+            <a href="impressum.html">Impressum | </a>&copy; 2024 Claudiu Ghise. Alle Rechte vorbehalten.
         </div>
     </footer>
 
     <!-- Slick Carousel JS -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
     <script type="text/javascript">
-        $(document).ready(function(){
+        $(document).ready(function () {
             $('.carousel').slick({
                 dots: true,
                 infinite: true,
@@ -67,4 +71,5 @@
         });
     </script>
 </body>
+
 </html>
