--- a/pi.claudiu-ghise.de/index.html
+++ b/pi.claudiu-ghise.de/index.html
@@ -1,26 +1,44 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Poarta</title>
-    <meta name="description" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="index.css" />
-  </head>
 
-  <body>
-    <div class="title">
-      <p>Poarta</p>
-    </div>
-    <div class="btn">
-      <button class="close">Inchide</button>
-      <button class="open">Deschide</button>
-    </div>
-    <h1 class="not"></h1>
-    <h1 class="timer"></h1>
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <title>Poarta</title>
+  <meta name="description" content="" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <link rel="stylesheet" href="index.css" />
+  <link rel="manifest" href="manifest.json">
+</head>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="index.js"></script>
-  </body>
+<body>
+  <div class="title">
+    <p>Poarta</p>
+  </div>
+  <div class="btn">
+    <button class="close">Inchide</button>
+    <button class="open">Deschide</button>
+  </div>
+  <h1 class="not"></h1>
+  <h1 class="timer"></h1>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="index.js"></script>
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('service-worker.js')
+        .then((registration) => {
+          console.log('Service Worker registered with scope:', registration.scope);
+        })
+        .catch((error) => {
+          console.log('Service Worker registration failed:', error);
+        });
+    } else {
+      console.log('Service Worker not supported in this browser.');
+    }
+  </script>
+
+</body>
+
 </html>
