final , progressbar added with animation

--- a/pi.claudiu-ghise.de/index.html
+++ b/pi.claudiu-ghise.de/index.html
@@ -14,14 +14,18 @@
 
 <body>
   <div class="title">
-    <p>Poarta</p>
+    <p>Poartă</p>
   </div>
   <div class="btn">
-    <button class="close">Inchide</button>
+    <button class="close">Închide</button>
     <button class="open">Deschide</button>
   </div>
-  <h1 class="not"></h1>
-  <h1 class="timer"></h1>
+  <div class="progress-bar">
+    <div class="progress"></div>
+  </div>
+  <p class="not"></p>
+
+
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="index.js"></script>
