index.html finished restyling

--- a/claudiu-ghise.de/HTML/impressum.html
+++ b/claudiu-ghise.de/HTML/impressum.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html lang="de">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Impressum - Portfolio</title>
     <link rel="stylesheet" href="/CSS/index.css">
 </head>
-<body>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="impressum.html">Impressum</a></li>
-        </ul>
-    </nav>
 
-    <section id="impressum">
+<body>
+    <div class="nav-bar">
+
+        <ul>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="HTML/projects.html">Projects</a></li>
+        </ul>
+
+    </div>
+
+    <section class="impressum">
         <h1>Impressum</h1>
         <p>Angaben gemäß § 5 TMG:</p>
         <p>
@@ -36,8 +39,17 @@
         </p>
     </section>
 
-    <footer>
-        <p>&copy; 2024 Mein Name. Alle Rechte vorbehalten. <a href="impressum.html">Impressum</a></p>
+    <footer class="footer">
+        <div class="git-logo">
+            <img src="/Image/github.png" alt="GitHub Logo">
+        </div>
+        <div class="git-link">
+            <a href="https://github.com/ClaudiuG18">GitHub</a>
+        </div>
+        <div class="impress-div">
+            <a href="impressum.html">| Impressum </a>
+        </div>
     </footer>
 </body>
+
 </html>
