--- a/claudiu-ghise.de/index.html
+++ b/claudiu-ghise.de/index.html
@@ -11,39 +11,43 @@
 
 <body>
     <div class="nav-bar">
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="HTML/projects.html">Projects</a></li>
-            </ul>
-        </nav>
-    </div>
 
-    <div class="intro-text">
-        <p>
-            My name is Claudiu Ghise, and I'm a <strong>software developer</strong>. I completed my vocational
-            training at a German company in Schwabach and
-            <strong>
-                <a href="https://www.bsz-roth.de/berufsfachschule-fuer-informatik/die-ausbildung/"
-                    target="_blank">Staatliches Berufsfachschule für Informatik Roth,
-                </a>
-            </strong>
-            gathering experience with C++, C#, WPF, SQL and Python.
-        </p>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="HTML/projects.html">Projects</a></li>
+        </ul>
+
     </div>
-    <div class="profile-pic">
-        <img src="Image/claudiu_elegant2.png" alt="Profile pic">
-    </div>
+    <main>
+        <div class="intro-text">
+            <p>
+                My name is Claudiu Ghise, and I'm a <strong>software developer</strong>. I completed my vocational
+                training at a German company in Schwabach and
+                <strong>
+                    <a href="https://www.bsz-roth.de/berufsfachschule-fuer-informatik/die-ausbildung/"
+                        target="_blank">Staatliches Berufsfachschule für Informatik Roth,
+                    </a>
+                </strong>
+                gathering experience with C++, C#, WPF, SQL and Python.
+            </p>
+        </div>
+        <div class="profile-pic">
+            <img src="Image/selfie2.jpg" alt="Profile pic">
+        </div>
+    </main>
 
     <footer class="footer">
-        <div class="contact-div">
-            <a href="https://github.com/ClaudiuG18" target="_blank"><img src="/Image/github.png" alt="GitHub Logo"
-                    class="github-logo">GitHub</a>
+        <div class="git-logo">
+            <img src="/Image/github.png" alt="GitHub Logo">
         </div>
-        <div class="impressum-div">
-            <a href="impressum.html">Impressum | </a>&copy; 2024 Claudiu Ghise. Alle Rechte vorbehalten.
+        <div class="git-link">
+            <a href="https://github.com/ClaudiuG18">GitHub</a>
+        </div>
+        <div class="impress-div">
+            <a href="HTML/impressum.html">| Impressum </a>
         </div>
     </footer>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </body>
 
