--- a/claudiu-ghise.de/HTML/impressum.html
+++ b/claudiu-ghise.de/HTML/impressum.html
@@ -10,12 +10,10 @@
 
 <body>
     <div class="nav-bar">
-
         <ul>
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="HTML/projects.html">Projects</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="/HTML/projects.html">Projects</a></li>
         </ul>
-
     </div>
 
     <section class="impressum">
