--- a/claudiu-ghise.de/index.html
+++ b/claudiu-ghise.de/index.html
@@ -10,43 +10,54 @@
 </head>
 
 <body>
-    <div class="nav-bar">
 
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="HTML/projects.html">Projects</a></li>
-        </ul>
-
-    </div>
-    <main>
-        <div class="intro-text">
-            <p>
-                My name is Claudiu Ghise, and I'm a <strong>software developer</strong>. I completed my vocational
-                training at a German company in Schwabach and
-                <strong>
-                    <a href="https://www.bsz-roth.de/berufsfachschule-fuer-informatik/die-ausbildung/"
-                        target="_blank">Staatliches Berufsfachschule für Informatik Roth,
-                    </a>
-                </strong>
-                gathering experience with C++, C#, WPF, SQL and Python.
-            </p>
+    <main class="container">
+        <div class="navbar">
+            <ul>
+                <li class="my-name">Claudiu Ghi&#537;e</li>
+                <li><a href="index.html">Home |</a></li>
+                <li><a href="HTML/projects.html">Projects</a>
+                <li>
+            </ul>
         </div>
-        <div class="profile-pic">
-            <img src="Image/selfie2.jpg" alt="Profile pic">
+        <div class="pic-container">
+            <div class="pic">
+                <img src="Image/selfie2.jpg" alt="Profile pic">
+            </div>
+            <div class="introtext">
+                <p>
+                    My name is Claudiu Ghise, and I'm a <strong>software developer</strong>. I completed my vocational
+                    training at a German company in Schwabach and
+                    <strong>
+                        <a href="https://www.bsz-roth.de/berufsfachschule-fuer-informatik/die-ausbildung/"
+                            target="_blank">Staatliches Berufsfachschule für Informatik Roth,
+                        </a>
+                    </strong>
+                    gathering experience with C++, C#, WPF, SQL and Python.
+                </p>
+            </div>
+
+        </div>
+        <div class="galery">
+            <ul class="cards">
+                <li>1</li>
+                <li>2</li>
+                <li>2</li>
+                <li>3</li>
+            </ul>
+        </div>
+        <div class="footer">
+            <div class="git-logo">
+                <img src="/Image/github.png" alt="GitHub Logo">
+            </div>
+            <div class="git-link">
+                <a href="https://github.com/ClaudiuG18">GitHub</a>
+            </div>
+            <div class="impress-div">
+                <a href="HTML/impressum.html">| Impressum </a>
+            </div>
         </div>
     </main>
-
-    <footer class="footer">
-        <div class="git-logo">
-            <img src="/Image/github.png" alt="GitHub Logo">
-        </div>
-        <div class="git-link">
-            <a href="https://github.com/ClaudiuG18">GitHub</a>
-        </div>
-        <div class="impress-div">
-            <a href="HTML/impressum.html">| Impressum </a>
-        </div>
-    </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </body>
