--- a/claudiu-ghise.de/HTML/projects.html
+++ b/claudiu-ghise.de/HTML/projects.html
@@ -18,24 +18,15 @@
     <main>
         <div class=project id="1">
             <h1>Projects</h1>
-            <p>Below, you will see a few of my recent projects: </p>
-        </div>
-
-        <div class="project" id="2">
-            <h2><a href="snake.html">Snake</a> </h2>
-            <p>A simple Snake game in JS. You can try it out by clicking on the Snake word!</p>
-        </div>
-        <div class="project" id="3">
-            <h2><a href="tictactoe.html">TiTacToe</a> </h2>
-            <p>TicTacToe Game (I know it doesnt make sense in plaiying alone :P)</p>
+            <p>Below, you will see my recent projects</p>
         </div>
         <div class="project" id="4">
             <h2> <a href="grammar_game.html">Grammar game</a> </h2>
-            <p>Practice the German article!</p>
+            <p>Practice the German - Romanian article!</p>
         </div>
         <div class="project" id="5">
             <h2> <a href="password_manager.html">Password manager</a> </h2>
-            <p>A password manager build using WPF and SQLite</p>
+            <p>A password manager build using C# WPF and SQLite</p>
         </div>
     </main>
 
