impressum page done

--- a/claudiu-ghise.de/index.html
+++ b/claudiu-ghise.de/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Portfolio</title>
-    <link rel="stylesheet" href="/CSS/index.css">
+    <link rel="stylesheet" href="CSS/index.css">
 
 </head>
 
@@ -40,6 +40,11 @@
                 gathering experience with C++, C#, WPF, SQL, CAPL, Java Script, HTML, CSS, Microsoft Powerapps and
                 Embedded Systems like Arduino, STM-32 and Raspberry Pi. In fact this website is hosted on a Raspberry Pi
                 4 using NGINX.
+            </p>
+            <p>
+                Curently employed as a Tester in the Verification and Validation department. I'm responsible for testing
+                both the software and hardware of the company's products, as well as the development of test automation
+                software.
             </p>
         </div>
 
